fix gallery layout on tablet

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,78 +1,102 @@
-.gallery-grid{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
+.gallery-grid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  z-index: 0;
+  margin: 0 auto;
+}
+
+.gallery-card {
+  display: block;
+  width: 300px;
+  height: 400px;
+  overflow: hidden;
+}
+
+.gallery-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 65% center;
+}
+
+.gallery .view-button {
+  margin: 50px auto 0;
+  background-color: var(--highlight-secondary-color);
+  border-radius: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .gallery-grid {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .gallery-card {
+    width: 312px;
+    height: 412px;
+  }
+
+  .gallery-card.large {
+    width: 100%;
+    grid-column: span 2;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .gallery-grid {
+    padding: 0 110px;
+    grid-template-columns: repeat(2, 1fr);
     z-index: 0;
-    margin: 0 auto;
+  }
+
+  .gallery-card {
+    width: 330px;
+    height: 412px;
+  }
+
+  .gallery-grid::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    height: 90%;
+    background: var(--highlight-secondary-color);
+    z-index: -1;
+  }
 }
 
-.gallery-card{
-    display: block;
-    width: 300px;
-    height: 400px;
-    overflow: hidden;
-}
+@media screen and (min-width: 1440px) {
+  .gallery-grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0;
+  }
 
-.gallery-card img{
-    width:100%;
-    height:100%;
-    object-fit:cover;
-    object-position: 65% center;
-}
-
-.gallery .view-button{
-    margin: 50px auto 0;
-    background-color: var(--highlight-secondary-color);
-    border-radius: 40px;
-}
-
-@media screen and (min-width:768px) {
-    .gallery-grid{
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .gallery-card{
-        width: 312px;
-        height: 412px;
-    }
-}
-
-@media screen and (min-width:1024px) {
-    .gallery-grid{
-        position: relative;
-    }
-
-    .gallery-grid::before{
-        content: "";
-        position: absolute;
-        width: 80%;
-        height: 90%;
-        background: var(--highlight-secondary-color);
-        z-index: -1;
-
-    }
-}
-
-@media screen and (min-width: 1440px){
-    .gallery-card{
+  .gallery-card {
     width: 380px;
     height: 480px;
-    }
+  }
 
-    .gallery-grid::before{
+  .gallery-card.large {
+    width: 380px;
+    grid-column: span 1;
+  }
+
+  .gallery-grid::before {
     width: 110%;
     height: 75%;
-    }
-
+  }
 }
 
-@media screen and (min-width: 1920px){
-
-    .gallery-card{
-        width: 450px;
-        height: 550px;
-    }
+@media screen and (min-width: 1920px) {
+  .gallery-card {
+    width: 450px;
+    height: 550px;
+  }
 }
